Closed Bug 80196 Opened 24 years ago Closed 24 years ago

Mac drag service custom drag region broken

Categories

(Core :: XUL, defect)

defect
Not set
blocker

Tracking

()

RESOLVED FIXED
mozilla0.9.1

People

(Reporter: mikepinkerton, Assigned: mikepinkerton)

References

Details

Attachments

(1 file)

In order to get the native region, we have to be able to get the nsIRegion from an nsIScriptableRegion. It's ok if this part isn't scriptable since it will only be manipulated from c++. this fixes a problem in the mac drag service where I was assuming nsIScriptableRegion could just be QI'd to nsIRegion. Once I can get to the nsIRegion, the custom drag region works as expected. patch forthcoming
Blocks: 72515
this patch also makes the nsIScriptableRegion api's lowercase for JS.
Severity: normal → blocker
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.1
+ [noscript] nsIRegion GetRegion ( ) ; I guess it's not possible to have a [noscript] readonly attribute? + +NS_IMETHODIMP nsScriptableRegion::GetRegion(nsIRegion** outRgn) +{ + *outRgn = mRegion; + NS_ADDREF(*outRgn); + return NS_OK; Are you guaranteed that mRegion is non-null? Maybe NS_IF_ADDREFF here. Your ") ;" style is non-standard, but I guess that's OK. r/sr=sfraser
- change to NS_IF_ADDREF() - change to readonly attribute. i guess they can be noscript. thanks.
fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: