get region out of scriptableRegion to fix custom drag region. r=pchen/sr=smfr bug 80196.